# knowledge-table

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.sample  .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
backend/docs/: architecture.md  index.md
backend/docs/api/: overview.md
backend/docs/api/v1/endpoints/: document.md  graph.md  query.md
backend/docs/deployment/: native.md
backend/docs/development/: setup.md  testing.md
backend/docs/docs/api/: overview.md
backend/docs/docs/deployment/: docker.md
backend/docs/docs/development/: setup.md
backend/docs/docs/getting-started/: configuration.md
backend/docs/extending/: document_loaders.md  llm_services.md  overview.md  vector_databases.md
backend/docs/getting-started/: docker.md  installation.md  quickstart.md
backend/docs/models/: document.md  graph.md  llm.md  query.md
backend/docs/schemas/: document.md  graph.md  query.md
backend/docs/services/: document_service.md  graph_service.md  llm_service.md  query_service.md
backend/docs/testing/: testing.md
backend/docs/tutorials/: extracting-data.md
backend/src/: .dockerignore  Dockerfile
backend/src/app/: __init__.py  main.py
backend/src/app/api/v1/: api.py
backend/src/app/core/: config.py  dependencies.py
backend/src/app/models/: __init__.py  graph.py  llm.py  llm_responses.py  query.py  query_core.py  table.py
backend/src/app/schemas/: __init__.py  document.py  document_api.py  graph_api.py  query.py  query_api.py
backend/src/app/services/: document_service.py  graph_service.py  llm_service.py  query_service.py
backend/src/app/services/embedding/: __init__.py  base.py  factory.py  openai_embedding_service.py
backend/src/app/services/llm/: __init__.py  base.py  factory.py  openai_llm_service.py  openai_prompts.py  openai_service.py
backend/src/app/services/loaders/: __init__.py  base.py  factory.py  pypdf_service.py  unstructured_service.py
backend/src/app/services/vector_db/: base.py  factory.py  milvus_service.py  qdrant_service.py
backend/src/knowledge_table_api/: __init__.py  config.py  dependencies.py  main.py
backend/src/knowledge_table_api/api/v1/: __init__.py
backend/src/knowledge_table_api/core/: __init__.py  config.py  dependencies.py
backend/src/knowledge_table_api/models/: document.py  graph.py  llm.py  llm_response.py  query.py
backend/src/knowledge_table_api/routers/: __init__.py  document.py  graph.py  query.py
backend/src/knowledge_table_api/routing_schemas/: document.py  graph.py  query.py
backend/src/knowledge_table_api/services/: __init__.py  document.py  document_service.py  graph.py  graph_service.py  json_encoder.py  llm.py  llm_operations.py  llm_service.py  prompts.py  query.py  query_service.py  vector.py
backend/src/knowledge_table_api/services/llm/: __init__.py  base.py  factory.py  openai_service.py
backend/src/knowledge_table_api/services/loaders/: factory.py  pypdf_service.py  unstructured_service.py
backend/src/knowledge_table_api/services/vector_db/: __init__.py  base.py  factory.py  milvus_service.py
backend/src/knowledge_table_api/services/vector_index/: base.py  (+3 more)
backend/src/knowledge_table_api/utils/: __init__.py  json_encoder.py
backend/tests/: conftest.py  test_endpoint_document.py  test_endpoint_graph.py  test_endpoint_query.py  test_example.py  test_factory_llm.py  test_factory_loader.py  test_factory_vector_db.py  test_ping.py  test_service_document.py  test_service_graph.py  test_service_llm_openai.py  test_service_query.py  test_service_vector_db_milvus.py  test_service_vector_db_qdrant.py
backend/tests/app/: test_main.py
backend/tests/app/core/: test_config.py  test_dependencies.py
backend/tests/app/models/: test_model_document.py  test_model_graph.py  test_model_llm.py  test_model_query.py
backend/tests/app/routing_schemas/: test_schema_document.py  test_schema_graph.py  test_schema_query.py
backend/tests/app/services/: test_services_document_service.py  test_services_graph_service.py  test_services_llm_service.py  test_services_query_service.py
backend/tests/knowledge_table_api/: test_main.py
backend/tests/knowledge_table_api/core/: test_config.py  test_dependencies.py
backend/tests/knowledge_table_api/models/: test_graph.py  test_llm.py  test_model_query.py
backend/tests/knowledge_table_api/routing_schemas/: test_graph.py  test_query.py  test_schema_document.py
backend/tests/knowledge_table_api/services/: test_llm_service.py  test_services_document_service.py
(+125 files in other folders)
