[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-table-api"
authors = [{name = "Foo Bar"}]
description = "A Python API for the Knowledge Table service"
keywords = ["knowlege", "api"]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "attrs==24.2.0",
    "black==24.8.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "docx2txt==0.8",
    "environs==9.5.0",
    "fastapi==0.114.2",
    "filelock==3.16.1",
    "flatbuffers==24.3.25",
    "frozenlist==1.4.1",
    "fsspec==2024.9.0",
    "greenlet==3.1.0",
    "grpcio==1.66.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.2",
    "huggingface-hub==0.25.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "isort==5.13.2",
    "jiter==0.5.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "langchain-text-splitters==0.3.0",
    "langsmith==0.1.121",
    "marshmallow==3.22.0",
    "milvus-lite==2.4.10",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "numpy==1.26.4",
    "onnxruntime==1.19.2",
    "openai==1.45.1",
    "orjson==3.10.7",
    "packaging==24.1",
    "pandas==2.2.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "protobuf==5.28.2",
    "pydantic==2.9.1",
    "pydantic-settings==2.5.2",
    "pydantic_core==2.23.3",
    "pymilvus==2.4.6",
    "PyMuPDF==1.24.10",
    "PyMuPDFb==1.24.10",
    "pypdf==5.0.0",
    "PyPDF2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "regex==2024.9.11",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scipy==1.14.1",
    "six==1.16.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.35",
    "starlette==0.38.5",
    "sympy==1.13.3",
    "tenacity==8.5.0",
    "tiktoken==0.7.0",
    "tokenizers==0.19.1",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "ujson==5.10.0",
    "urllib3==2.2.3",
    "uuid==1.30",
    "uvicorn==0.30.6",
    "yarl==1.11.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "black",
    "flake8",
    "flake8-docstrings",
    "isort",
    "mypy",
    "pydocstyle[toml]",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpx",
    "pytest",
    "pytest-html",
]

[project.scripts]
knowledge-table-locate = "knowledge_table_api.main:locate"

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "knowledge_table_api.__version__"}

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D301"

[tool.bandit]

[tool.black]
line-length = 79
preview = true

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:There is no current event loop",
    "ignore:The 'app' shortcut is now deprecated.:DeprecationWarning",
    "ignore:Using extra keyword arguments on `Field` is deprecated and will be removed:pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Support for class-based `config` is deprecated, use ConfigDict instead.:pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Exception ignored .* MemoryObjectReceiveStream.__del__:pytest.PytestUnraisableExceptionWarning",
    "ignore:Unclosed .*:ResourceWarning",
    "ignore:Pydantic serializer warnings:UserWarning"
]
testpaths = [
    "tests",
]
addopts = "--cov=src/ -v --cov-report=term-missing --durations=20"
log_cli = false